src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Commercial</fullName>
        <description>For Commercial Housing Requests</description>
        <isActive>false</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Request</fullName>
        <description>For all Requests</description>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ADA_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ADA Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADA_Special_Needs__c</fullName>
        <label>ADA Special Needs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALE_Limit_Amount__c</fullName>
        <label>ALE Amount Limit</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALE_Limit_Time__c</fullName>
        <inlineHelpText>Months</inlineHelpText>
        <label>ALE Time Limit</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALE_Remaining__c</fullName>
        <formula>if (ALE_Limit_Amount__c &gt; ALE_Spent__c + ALE_Spent_Outside_Of_CRS__c + ALE_Unbilled__c,
ALE_Limit_Amount__c - (ALE_Spent__c + ALE_Spent_Outside_Of_CRS__c + ALE_Unbilled__c),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ALE Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALE_Spent_Outside_Of_CRS_Notes__c</fullName>
        <label>ALE Spent Outside of CRS Notes</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALE_Spent_Outside_Of_CRS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ALE Spent Outside of CRS</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALE_Spent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ALE Spent</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALE_Unbilled__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ALE Unbilled</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjuster_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adjuster Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adjuster_Changed_Date__c</fullName>
        <label>Adjuster Changed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Adjuster_First_Invoice__c</fullName>
        <label>Adjuster First Invoice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entire Amount</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>2 months</fullName>
                </value>
                <value>
                    <fullName>3 months</fullName>
                </value>
                <value>
                    <fullName>4 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adjuster_Mailing_State__c</fullName>
        <formula>Adjuster__r.MailingState</formula>
        <label>Adjuster Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjuster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The adjuster must already be a contact in the system.</inlineHelpText>
        <label>Adjuster</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Adjuster</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Claims (Adjuster)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adult_Description__c</fullName>
        <label>Adult Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alerts__c</fullName>
        <formula>IF( OR(Account.Parent.Priority__c,Account.Parent.Parent.Priority__c) , IMAGE(&quot;https://chart.googleapis.com/chart?chst=d_text_outline&amp;chld=FF0000|15|l|FFFFFF|_|&quot; 
+ &quot;PRIORITY ACCOUNT&quot;,&quot;&quot;),&apos;&apos;)</formula>
        <label>Alerts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Already_in_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Already in Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Through_Date__c</fullName>
        <label>Approved Through Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Area_Specialist_Assigned__c</fullName>
        <label>Residence Specialist Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Area_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Residence Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Called_In_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Called In By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Called In By)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Children_s_Ages__c</fullName>
        <label>Children&apos;s Ages</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <label>Claim #</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claims_Document_Email__c</fullName>
        <description>We are you this filed in Echo Sign Agreement Mapping</description>
        <formula>Policyholder__r.Claims_Document_Email__c</formula>
        <label>Claims Document Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_PTC__c</fullName>
        <description>Adjuster comments from the portal</description>
        <inlineHelpText>Adjuster comments from PTC.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commuting_Requirement__c</fullName>
        <label>Commuting Requirement</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <description>Custom field that hold the created date and time.  This field can be used for reporting and will show the time along with the date.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>TODAY()</formula>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Daily_Rate__c</fullName>
        <label>Current Daily Rate</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Care_Specialist_Assigned__c</fullName>
        <label>Customer Care Specialist Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Care_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Care Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_Address__c</fullName>
        <label>Damaged Property Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_BR__c</fullName>
        <label>Damaged Property #BR</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_BTH__c</fullName>
        <label>Damaged Property #BTH</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_City__c</fullName>
        <label>Damaged Property City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_Country__c</fullName>
        <label>Damaged Property Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Damaged_Property_State__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>CAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Damaged_Property_Cross_Streets__c</fullName>
        <label>Damaged Property Cross Streets</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_Full_Address__c</fullName>
        <formula>Damaged_Property_Address__c &amp; &quot;,&quot; &amp; Damaged_Property_City__c &amp; &quot;, &quot; &amp; Text(Damaged_Property_State__c) &amp; &quot; &quot; &amp; Damaged_Property_Zip__c &amp; &quot;, &quot; &amp; Text(Damaged_Property_Country__c)</formula>
        <label>Damaged Property Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_Sq_Ft__c</fullName>
        <label>Damaged Property Sq Ft</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_State__c</fullName>
        <label>Damaged Property State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Damaged_Property_Type__c</fullName>
        <label>Damaged Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apartment</fullName>
                </value>
                <value>
                    <fullName>Condo</fullName>
                </value>
                <value>
                    <fullName>House</fullName>
                </value>
                <value>
                    <fullName>Mobile Home</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Townhouse</fullName>
                </value>
                <value>
                    <fullName>Travel Trailer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Damaged_Property_Zip__c</fullName>
        <label>Damaged Property Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Loss__c</fullName>
        <label>Date of Loss</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_Close__c</fullName>
        <description>Takes the Created Date - Closed Date to get the number of days it takes to close a deal</description>
        <formula>CloseDate - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Takes the Created Date - Closed Date to get the number of days it takes to close a deal.</inlineHelpText>
        <label>Days to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Responsible_Party__c</fullName>
        <description>Entered on Claim and pushed to SR</description>
        <label>Adjuster to Pay</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Refundable &amp; Non Refundable</fullName>
                </value>
                <value>
                    <fullName>Refundable Only</fullName>
                </value>
                <value>
                    <fullName>Non Refundable Only</fullName>
                </value>
                <value>
                    <fullName>Will Not Pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documents_2_0__c</fullName>
        <formula>HYPERLINK(&quot;http://blacklabel:8100&quot;, &quot;Docs&quot;)</formula>
        <label>Documents 2.0</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_Initial_Call__c</fullName>
        <formula>IF (NOT(ISNULL(Initial_Call_Date__c)), ((Initial_Call_Date__c -   CreatedDate )  * 1440),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration Initial Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Initial_Contact__c</fullName>
        <formula>IF (NOT(ISNULL( Initial_Contact_Date__c )), (( Initial_Contact_Date__c  -   CreatedDate )  * 1440),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration Initial Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <label>Entity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Length_of_Stay_Days__c</fullName>
        <label>Est. Length of Stay Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Length_of_Stay_Months__c</fullName>
        <label>Est. Length of Stay Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Check_In__c</fullName>
        <label>Requested Check-In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Check_Out__c</fullName>
        <label>Requested Check-Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FICO_Score__c</fullName>
        <label>FICO Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>File_number__c</fullName>
        <description>File number used for Public and Independent adjusters.</description>
        <inlineHelpText>File number for Public or Independent adjusters.</inlineHelpText>
        <label>File #</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Service_Request_ID__c</fullName>
        <description>To store the first service request ID created under a Claim. Value in this field populates from Apex Trigger</description>
        <label>First Service Request ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Kitchen__c</fullName>
        <label>Full Kitchen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Requested</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Furniture_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Furniture Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Communication_Preference_Notes__c</fullName>
        <formula>Adjuster__r.Communication_Preference_Notes_Length__c &gt; 0</formula>
        <label>Has Communication Preference Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Insured_For__c</fullName>
        <label>Home Insured For</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Customer_Care_Specialist_Assigned__c</fullName>
        <label>Hotel Customer Care Specialist Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hotel_Customer_Care_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hotel Customer Care Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hotel_Only__c</fullName>
        <label>Hotel Only</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hotel_Phone__c</fullName>
        <label>Hotel Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Housewares_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Housewares Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Housing_Conversion_Declined__c</fullName>
        <label>Housing Conversion Declined</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Housing_Coordinator_Assigned__c</fullName>
        <label>Residence Coordinator Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Housing_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Residence Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incidental_Cap__c</fullName>
        <inlineHelpText>Cap adjuster approves for hotel fees such as phone, movies, food, etc.</inlineHelpText>
        <label>Incidental Cap</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Call_Date__c</fullName>
        <inlineHelpText>Date that an attempt was made to contact the Policyholder.</inlineHelpText>
        <label>Initial Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_Contact_Date__c</fullName>
        <label>Initial Contact Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_Service_Request__c</fullName>
        <label>Initial Service Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Housing</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>FRV</fullName>
                </value>
                <value>
                    <fullName>Furniture Only</fullName>
                </value>
                <value>
                    <fullName>Unfurnished</fullName>
                </value>
                <value>
                    <fullName>Trailer-Mobile Home</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Finders Fees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_PTIDs__c</fullName>
        <description>stored old ptids for auto number generation and field update</description>
        <label>Legacy_PTIDs</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Daily_Rate__c</fullName>
        <label>Max Daily Rate</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Microwave_Fridge__c</fullName>
        <label>Microwave/Fridge</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Requested</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_ALE_Billing__c</fullName>
        <inlineHelpText>Monthly billing amount adjuster approves (monthly housing costs cannot exceed this amount)</inlineHelpText>
        <label>Monthly ALE Billing</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Rental_Amount__c</fullName>
        <label>Policyholder&apos;s Monthly Responsibility</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Move_In_Date__c</fullName>
        <label>Move In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_of_Hotel__c</fullName>
        <description>The name of the hotel that the PH is already checked into.</description>
        <label>Name of Hotel</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_Hotel_By__c</fullName>
        <label>Need Hotel By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Adults__c</fullName>
        <label>Number of Adults</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Bathrooms__c</fullName>
        <description>Bathrooms PH requires</description>
        <label>Number of Bathrooms</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Bedrooms__c</fullName>
        <description>Bedrooms PH requires</description>
        <label>Number of Bedrooms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Children__c</fullName>
        <label>Number of Children</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Pets__c</fullName>
        <label>Number of Pets</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Rooms__c</fullName>
        <label>Number of Rooms</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Options__c</fullName>
        <label>Other Options</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_of_Loss__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Chemical/Pesticides</fullName>
                </value>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Flood</fullName>
                </value>
                <value>
                    <fullName>Foundation/Ground Settling</fullName>
                </value>
                <value>
                    <fullName>Heating/Air Conditioning</fullName>
                </value>
                <value>
                    <fullName>Hurricane</fullName>
                </value>
                <value>
                    <fullName>Lightning</fullName>
                </value>
                <value>
                    <fullName>Mudslide</fullName>
                </value>
                <value>
                    <fullName>Power Surge/Outage</fullName>
                </value>
                <value>
                    <fullName>Sewage</fullName>
                </value>
                <value>
                    <fullName>Smoke Damage</fullName>
                </value>
                <value>
                    <fullName>Theft/Vandalism</fullName>
                </value>
                <value>
                    <fullName>Tornado</fullName>
                </value>
                <value>
                    <fullName>Tree</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Wildfire</fullName>
                </value>
                <value>
                    <fullName>Wind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parking__c</fullName>
        <label>Parking</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pay_Direct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked than the amount that the PH is responsible to pay is paid directly to a vendor and doesn&apos;t have to be collected by CRS</description>
        <inlineHelpText>PH is paying their permanent LL or temporary LL. Checking this box will trigger a note on the invoice.</inlineHelpText>
        <label>Pay Landlord Directly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pet_Boarding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pet Boarding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pet_Friendly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pet Friendly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pet_Type_and_Breed__c</fullName>
        <label>Pet Type and Breed</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceTrak_ID_2__c</fullName>
        <description>This is the new auto number field for the PTID that gets stored in the claim name by workflow rules (populate opportunity name)</description>
        <displayFormat>{0}</displayFormat>
        <label>PlaceTrak ID 2</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PlaceTrak_ID__c</fullName>
        <externalId>true</externalId>
        <label>PlaceTrak ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Policy_Type__c</fullName>
        <label>Policy Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Condo</fullName>
                </value>
                <value>
                    <fullName>Homeowner</fullName>
                </value>
                <value>
                    <fullName>Renters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Policyholder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Policyholder</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Policyholder, Adjuster Policyholder Record Type</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Policyholder_to_Pay__c</fullName>
        <label>Policyholder to Pay</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Deposit_Responsible_Party__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Refundable &amp; Non Refundable</fullName>
                </value>
                <value>
                    <fullName>Refundable Only</fullName>
                </value>
                <value>
                    <fullName>Non Refundable Only</fullName>
                </value>
                <value>
                    <fullName>Will Not Pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>